# roverpro-firmware

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Pipfile  PowerBoard_toolchain.cmake  README.md  bootloader.c  bootypic.mcp  build.cmd  build.py  mplab.py  requirements.txt  tidy.sh  tidy_uncommitted.bat
.github/workflows/: main.yml
Avatar_Controller/Controller_V2/Carrier_Board/: registers.h  usb_config.c
Avatar_Controller/Controller_V2/Carrier_Board/src/: PwrMgnt.h  device_ocu.c  main.c  main_mine.c  stdhdr.h
Avatar_Controller/Controller_V2/Carrier_Board/trunk/: firmware.mcp  registers.h
Avatar_Controller/Controller_V2/Carrier_Board_New_Atom/src/: device_ocu.c  device_ocu.h  device_ocu_i2c.c  device_ocu_i2c.h  stdfunctions.c  usb_descriptors.c
Avatar_Controller/Controller_V2/Testing/ControllerTest/: BatteryTest.sh  ControllerTest.sh
Avatar_Controller/Micro_Controller_V1/OCU_Major/: Audio.c  Audio.h  Controller.c  Controller.h  DEE Emulation 16-bit.c  Defines.h  Dynamixel.c  Dynamixel.h  HardwareProfile - Low Pin Count USB Development Kit.h  HardwareProfile.h  Initialize.c  Initialize.h  Messaging.c  Messaging.h  OCU_2.00.mcp  PIC24F_STANDALONE.h  PWM.c  RS485.c  RS485.h  Remote_Power.c  Remote_Power.h  SPI.c  Timers.c  Timers.h  Video_Receiver.c  Video_Receiver.h  address_generation.c  address_generation.h  main.c
Avatar_Controller/Micro_Controller_V1/OCU_Power/: Power_PIC_2.00.mcp  main.c
Avatar_Micro_Robot/Carrier_Board/src/: main.c
Avatar_Micro_Robot/Carrier_Board_New_Atom/: registers.h
Avatar_Micro_Robot/Carrier_Board_New_Atom/src/: i2c.h  testing.c
Avatar_Micro_Robot/Power_Board/: firmware.mcp
Avatar_Micro_Robot/Power_Board/closed_loop_control/: Filters.h
Avatar_Micro_Robot/Power_Board/src/: device_robot_motor.h  device_robot_motor_loop.c  device_robot_motor_loop.h  main.c
Avatar_Micro_Robot/Robot_V2/Avatar_Home&Office/: firmware.mcp
Avatar_Micro_Robot/Robot_V2/Power_Board/: HardwareProfile.h  NMakefile  firmware.mcp  registers.h
Avatar_Micro_Robot/Robot_V2_Accessories/Battery Charger V2.X/: BatteryCharger.mcp
Avatar_Micro_Robot/Robot_V2_Accessories/Boom_Camera_V2/: Boom.mcp
Avatar_Micro_Robot/Robot_V2_Accessories/Initiator/: firmware.mcp  usb_config.h
Avatar_Micro_Robot/Robot_V2_Accessories/Latch_Tow/: Hitch.mcp
Carrier_Board/: README  usb_config.h
Carrier_Board/microchip/USB/: usb_function_msd.h  usb_printer_pos_seiko_mpu_l465.h
Carrier_Board/src/: usb_device.c
Carrier_Board/src/SA1xLibrary/: SA_Comm.c  sha256.h
Carrier_Board_New_Atom/: firmware.mcp
Carrier_Board_New_Atom/microchip/USB/: usb_printer_pos_epson_tm_t88iv.h
Carrier_Board_New_Atom/src/: device_carrier.c  usb_descriptors.c
Common/REV_A/Crypto/SA1xLibrary/: SA_API.h  (+3 more)
Common/REV_A/USB/: registers.h  usb_communication.c  usb_communication.h  usb_config.h  usb_descriptors.c  usb_device.c
Common/V2.X/USB/: usb_descriptors.c  usb_device.c
Internal_Charger/: InternalCharger.mcp
Internal_Charger/src/USB/: RXUSBDevice.c
Internal_Charger/src/core/: PWM.h  TWI.h  UART.c
MPLAB/: PowerBoard.mcp  Useful.wtch  bootypic.mcp
MPLAB/PowerBoard/: PowerBoard.mcp
MPLAB/bootypic/: bootypic.mcp
PowerBoard/: CMakeLists.txt  PowerBoard.mcp
PowerBoard/docsrc/: layout.xml
PowerBoard/src/: analog.c  analog.h  battery.h  bytequeue.c  bytequeue.h  clock.c  clock.h  communication.c  communication.h  cooling.c  cooling.h  drive.c  drive.h  flipper.c  flipper.h  hardware_definitions.h  i2clib.c  i2clib.h  main.c  main.h  motor.c  motor.h  poll_i2c.c  poll_i2c.h  power.c  power.h  power2.c  power2.h  settings.c  settings.h  state.h  stdfunctions.c  stdhdr.h  version.h.in  xc16_clang_tools_stubs.h
Power_Board/: CMakeLists.txt  Doxyfile  Makefile  PowerBoard.mcp  build.py  firmware.mcp  prebuild.py  tidy_all.cmd  usb_config.h
Power_Board/closed_loop_control/: Filters.c  PID.c
Power_Board/include/: Filters.h  GenericTypeDefs.h  HardwareProfile.h  PID.h  analog.h  battery.h  bytequeue.h  communication.h  cooling.h  counter.h  device_power_bus.h  device_robot_motor.h  device_robot_motor_i2c.h  device_robot_motor_loop.h  drive.h  flipper.h  hardware_definitions.h  i2clib.h  interrupt_switch.h  main.h  motor.h  power.h  power_bringup.h  registers.h  settings.h  state.h  stdhdr.h  testing.h  uart_control.h
Power_Board/microchip/: DEE Emulation 16-bit.h  uart2.h
Power_Board/microchip/USB/: usb.h  usb_hal.h  usb_hal_pic24.h
Power_Board/src/: Filters.c  InputCapture.c  PID.c  analog.c  battery.c  bytequeue.c  bytequeue.h  clock.c  clock.h  communication.c  communication.h  cooling.c  cooling.h  counter.c  device_power_bus.c  device_power_bus_charging.c  device_robot_motor.c  device_robot_motor_i2c.c  device_robot_motor_loop.c  drive.c  drive.h  flipper.c  i2clib.c  i2clib.h  interrupt_switch.c  main.c  main.h  motor.c  motor.h  poll_i2c.c  power.c  power.h  power2.c  power_bringup.c  settings.c  settings.h  state.h  stdfunctions.c  stdhdr.h  testing.c  (+4 more)
Rover_Pro/Internal_Charger/src/: InternalCharger.c
Rover_Pro/Motor_Controller/first_try/: firmware.mcp  usb_config.h
Rover_Pro/Motor_Controller/src/: ESC.c  Testing.c
Rover_Pro/Power_Board/: README.md  usb_config.h
Rover_Pro/Power_Board/closed_loop_control/: PID.h
Rover_Pro/Power_Board/src/: debug_uart.h  device_robot_motor.h  main.c
bootypic/: CMakeLists.txt  bootloader.c  bootloader.h  bootypic.mcp
bootypic/devices/dspic33epXmc/32mc204/: boot_user.h
bootypic/devices/pic24fj256gb106/: app.gld  boot.gld  boot_user.c  boot_user.h  config.h  p24FJ256GB106_app.gld
bootypic/devices/pic24fvXkm/: boot_user.c
buildtools/: build.py  mplab.py  postbuildchecks.py
closed_loop_control/: Filters.c
closed_loop_control/core/: InputCapture.c
cmake/: FindMPLAB.cmake  FindMPLABX.cmake  FindXC16.cmake  PowerBoard_toolchain.cmake
devices/pic24fj256gb106/: boot_user.c  boot_user.h
doc/: 2011_Robot_PowerBoardDatasheet.docx
scripts/: read_mcu.bat  write_mcu.bat
src/: device_robot_motor.c  device_robot_motor_i2c.c  device_robot_motor_loop.c  device_robot_motor_loop.h  main.c
(+995 files in other folders)
